# recipebox-1

./: .gitignore  README.md  pyproject.toml
recipe_app/: admin.py  forms.py  models.py  urls.py  views.py
recipe_app/migrations/: 0001_initial.py
recipe_project/: settings.py  urls.py
templates/: add_author_form.html  add_recipe_form.html  authors.html  edit_recipe_form.html  error.html  index.html  login.html  main.html  recipes.html
