[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = "Application that serves recipes from different authors"
authors = ["luisfff29 <luisfff29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
faker = "^4.0.3"
autopep8 = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
